all functionlties added and .js file generated

--- a/src/todo.html
+++ b/src/todo.html
@@ -30,6 +30,6 @@
     </section>
   </main>
 
-  <script type="module" src="todo.ts"></script>
+<script type="module" src="../dist/todo.js"></script>
 </body>
 </html>
