all functionalties added

--- a/src/todo.html
+++ b/src/todo.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>✅ Simple Todo</h1>
-    <p>Add, edit, and manage your tasks with due dates</p>
+    <h1>📝 Simple Todo</h1>
   </header>
 
   <main class="container">
